# Sync_Camera_RTSP

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  readme.md  render_display.cpp  stream_5004.sdp  stream_5006.sdp  sync_camera.cpp  sync_camera.h  video_streamer.cpp
includes/: multi_camera_sync.h  render_display.h  shared_memory_streamer.h  sync_camera.h  tcp_streamer.h  video_streamer.h
recored/: video_streamer.cpp - 内存泄漏.txt  初始的同步队列.txt  改进了一次的同步队列.txt
scripts/: compile_test.bat  simple_camera_test.cpp  test_rtsp_client.bat
src/: main-rtsp.cpp  main.cpp  multi_camera_sync.cpp  render_display.cpp  shared_memory_streamer.cpp  sync_camera.cpp  tcp_streamer.cpp  video_streamer.cpp
sync_camera_opencv_test/: entity_c.py  report.json  sync_test_report.json  sync_tester.py  test.py  test_consumer.py
